# idm-auto-closer

./: CMakeLists.txt  README.md  main.cpp
