cmake_minimum_required(VERSION 3.12)
project(IDM_AUTO_CLOSE)
if (WIN32)
    add_compile_options(/SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup)
    add_link_options(/SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup)
else()
    set(SUBSYSTEM_LINKER_OPTIONS "-mwindows")
endif()

add_executable(idmautoclose main.cpp)